# MetaAgent

./: .env.example  .flake8  .gitignore  QA.py  README.md  app.sh  chinese_LLM.py  config.yaml  conversational_agent_db  docker-compose.yml  environment.yml  jinatest.py  jinatest2.py  mcp-agent.config.schema.json  package.json  pdfapp_Baichuan.py  pdfapp_Moss.py  pdfapp_gpt2.py  pyproject.toml  requirements.txt  result.txt  text.md  try_traces.py
ai_chat/: .eslintrc.cjs  .eslintrc.js  .prettierrc.cjs  .prettierrc.json  README.md  components.json  package-lock.json  package.json  prettier.config.js  tailwind.config.js  tsconfig.json
ai_chat/public/: bot.yaml
dima/: app.py  chinese_LLM.py  config.yaml  model_test_Pygmalion.py  pdfapp_Moss.py
dima/configs/: config.py  model_config.py
dima/embedding/: huggingface.py  jina.py
dima/memory/: base.py
dima/models/: LLM_selection.py  __init__.py  chatglm2_excutor.py  chatglm_llm.py  llama_llm.py  model_test_Pygmalion.py  moss_llm.py  openai_llm.py  pygmalion_excutor.py  shared.py
dima/vector_store/: chroma_vs.py
examples/: comic_company.py  mcp-agent.jsonl  multi_modal_agent.py
examples/PromptAgent/: config.py  inference.py  task.py
examples/audio/: audio_generation.py
examples/evaluation/: evaluate_deepseek.py
examples/mcp/: mcp_agent.config.yaml  mcp_aggregator.py  mcp_aggregator_test.py  mcp_app.py
examples/memory/: example_chunk.py  example_pdf_rag.py  web_pdf_chunk.py
examples/models/: llm_model.py
examples/tts_example/: elevenlabs_example.py  kokoro_example.py  parler_example.py
frontend/: next.config.mjs  package-lock.json  package.json  tsconfig.json
fsgan/fsgan/: train_blending.py  train_inpainting.py  train_reenactment_attr_no_seg.py  train_segmentation.py
logs/: log.txt
metaagent/: Llama2_prompt.py  app.py  chatapi.py  config.py  config.yaml  console.py  const.py  context.py  context_dependent.py  event_progress.py  information.py  logs.py  manager.py  mcp_app.py  minio_bucket.py  pdfapp_Baichuan.py  progress_display.py  schema.py  simple_logger.py  test_jina.py  utils.py  workflow.yml  workflow_template.yml
metaagent/LLMs/: __init__.py  chatglm2_excutor.py  llmapi.py  openai_llm.py
metaagent/actions/: __init__ copy.py  __init__.py  action copy.py  action.py  action_output.py  action_register.py  add_requirement.py  draw_image.py  make_videos.py  say.py  search_and_summarize.py  story_board.py  test_write_prd.py  text2audio.py  text2image.py  write_prd.py  write_script.py
metaagent/agents/: agent.py  agent_info.py  agents_bank.py  agents_hub.py  base_agent v1.py  base_agent.py  cartoonist_agent.yml  comunication.py  message_queue.py  metagent.py  multi_modal_agent.py  multi_modal_agent.yml  product_manager.py  prompt_template.py  prompt_template_v1.py  retrieve.py  story_board_agent.yml  test.py  writer_agent.yml
metaagent/audio/: stream_player.py  text_to_stream.py  threadsafe_generators.py  utils.py
metaagent/environment/: env_info.py  environment.py
metaagent/evaluation/: golden.py  score.py  utils.py
metaagent/executor/: decorator_registry.py  executor.py  task_registry.py  temporal.py  workflow.py  workflow_signal.py
metaagent/fine_tuning/: config.py
metaagent/human_input/: handler.py  types.py
metaagent/llms/: llmapi.py
metaagent/logging/: events.py  json_serializer.py  listeners.py  logger.py  rich_progress.py  (+2 more)
prompts/: reflection_prompt.py
test/: test_llmapi.py
tests/: test_llmapi.py
vector_store/: base.py  chroma_vs.py
(+188 files in other folders)
