[tool.poetry]
name = "metaagent"
version = "0.1.0"
description = "The next generation of Multi-Modal Multi-Agent framework."
authors = ["Zhihao <zhihao.agi@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
litellm = "^1.53.9"
requests = "^2.32.3"
langid = "^1.1.6"
opentelemetry-api = "^1.28.2"
rouge-score = "^0.1.2"
bert-score = "^0.3.13"
loguru = "^0.7.3"
tenacity = "^9.0.0"
fire = "^0.7.0"
pyaudio = "^0.2.14"


[build-system]
requires = ["poetry-core", "wheel"]
build-backend = "poetry.core.masonry.api"
