[tool.poetry]
name = "metaagent"
version = "0.1.0"
description = "The next generation of Multi-Modal Multi-Agent framework."
authors = ["Zhihao <zhihao.agi@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.5.1+cu121", source = "pytorch"}
torchvision = {version = "^0.20.1+cu121", source = "pytorch"}
torchaudio = {version = "^2.5.1+cu121", source = "pytorch"}
litellm = "^1.53.9"
requests = "^2.32.3"
langid = "^1.1.6"
opentelemetry-api = "^1.28.2"
rouge-score = "^0.1.2"
bert-score = "^0.3.13"
loguru = "^0.7.3"
tenacity = "^9.0.0"
fire = "^0.7.0"
pyaudio = "^0.2.14"
phonemizer = "^3.3.0"
munch = "^4.0.0"
parler-tts = {git = "https://github.com/huggingface/parler-tts.git"}
flash-attn = {url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.7.3/flash_attn-2.7.3+cu12torch2.5cxx11abiFALSE-cp310-cp310-linux_x86_64.whl"}
numpy = "<2"
resampy = "^0.4.3"
pydub = "^0.25.1"
stream2sentence = "^0.3.0"
typing-extensions = "^4.12.2"
transformers = "4.46.1"
tokenizers = "0.20"
elevenlabs = "^1.50.5"
keyboard = "^0.13.5"
surya-ocr = "^0.9.3"
streamlit = "^1.41.1"
marker-pdf = "^1.3.1"
langchain = "^0.3.17"
langchain-community = "^0.3.16"
langchain-text-splitters = "^0.3.5"
faster-whisper = "^1.1.1"
yagooglesearch = "^1.10.0"
diffusers = "^0.32.2"
griffe = "^1.5.6"
arxiv = "^2.1.3"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core", "wheel"]
build-backend = "poetry.core.masonry.api"
